--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "devDependencies": {},
   "author": "Bela Stoyan <bela_stoyan@protonmail.com>",
-  "license": "AGPL-3.0"
+  "license": "AGPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NotBela/MyGoBot.org-Server-Emulator.git"
+  }
 }
